--- a/css/index.css
+++ b/css/index.css
@@ -104,9 +104,10 @@ header nav .nav_search {
 header nav .nav_search input {
   font-size: 12px;
   padding: 3px 5px;
+  border-radius: 5px;
 }
 header nav .nav_search input:first-child {
-  border-radius: 20px;
+  height: 22px;
 }
 
 main {
@@ -139,19 +140,71 @@ main aside {
       -ms-flex: 1;
           flex: 1;
 }
-main aside div {
+main aside > div {
   width: 100%;
   height: 200px;
   background: rgba(255, 255, 255, 0.8);
   margin-top: 20px;
+  padding: 20px 20px 0 20px;
+}
+main aside > div h3 {
+  border-left: 4px solid #3472ef;
+  padding: 0 10px;
+}
+main aside > div div {
+  padding-top: 10px;
+}
+main aside > div div p {
+  font-size: 14px;
+  text-indent: 2em;
 }
 main aside div:first-child {
   margin: 0;
+  font-size: 14px;
+}
+main aside div:first-child div {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+main aside div:first-child div img {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+}
+main aside div:first-child div div {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  padding: 0;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: left;
+  -webkit-justify-content: left;
+      -ms-flex-pack: left;
+          justify-content: left;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+main aside div:first-child p {
+  text-indent: 2em;
+  color: orange;
 }
 
 footer {
   width: 100%;
-  height: 300px;
+  height: 150px;
   background: rgba(128, 128, 128, 0.7);
   color: white;
 }
