--- a/sass/index.scss
+++ b/sass/index.scss
@@ -21,8 +21,7 @@ header {
             position: absolute;
             left: 10px;
             top: 10px;
-            background: url("../images/logo.dl.png")no-repeat center/contain;
-            //设置文本前面的空格如每段话前面的首行缩进；单位可以是em/px/% 等
+            background: url("../images/logo.dl.png")no-repeat center/contain; //设置文本前面的空格如每段话前面的首行缩进；单位可以是em/px/% 等
             text-indent: -999px;
         }
         ul {
@@ -47,9 +46,10 @@ header {
             input {
                 font-size: 12px;
                 padding: 3px 5px;
+                border-radius: 5px;
             }
             input:first-child {
-                border-radius: 20px;
+                height: 22px;
             }
         }
     }
@@ -69,37 +69,64 @@ main {
             padding: 0 10px;
             margin: 30px 0;
         }
-        .test{
+        .test {
             text-indent: 2em;
-            
         }
     }
     aside {
         flex: 1;
-        div {
+        &>div {
             width: 100%;
             height: 200px;
             background: rgba(255, 255, 255, 0.8);
             margin-top: 20px;
+            padding: 20px 20px 0 20px;
+            h3 {
+                border-left: 4px solid #3472ef;
+                padding: 0 10px; // margin: 30px 0;
+            }
+            div {
+                padding-top: 10px;
+                p {
+                    font-size: 14px;
+                    text-indent: 2em;
+                }
+            }
         }
+        .news {}
+        .messages {}
+        .friends {}
         div:first-child {
             margin: 0;
+            font-size: 14px;
+            div {
+                display: flex;
+                justify-content: space-between;
+
+                img {
+                    width: 80px;
+                    height: 80px;
+                    border-radius: 50%;
+                }
+                div {
+                    flex: 1;
+                    padding: 0;
+                    display: flex;
+                    justify-content: left;
+                    flex-direction: column;
+                }
+            }
+            p {
+                text-indent: 2em;
+                color: orange;
+            }
         }
-    }
-    .news {
-        // flex:1;
-    }
-    .messages {
-        // flex:1;
-    }
-    .friends {
-        // flex:1;
     }
 }
 
 footer {
     width: 100%;
-    height: 300px;
+    height: 150px;
     background: rgba(128, 128, 128, 0.7);
     color: white;
 }
