--- a/css/base.css
+++ b/css/base.css
@@ -1,44 +1,1 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-ul, ol, dl {
-  list-style: none;
-}
-
-a {
-  text-decoration: none;
-}
-
-img {
-  display: block;
-}
-
-.fl {
-  float: left;
-}
-
-.fr {
-  float: right;
-}
-
-.clearfix::before, .clearfix::after {
-  content: "";
-  height: 0;
-  line-height: 0;
-  display: block;
-  visibility: hidden;
-  clear: both;
-}
-
-input {
-  border: none;
-  outline: none;
-}
-
-body {
-  background: #eeeeee;
-  min-width: 920px;
-}
+*{margin:0;padding:0;box-sizing:border-box}ul,ol,dl{list-style:none}a{text-decoration:none}img{display:block}.fl{float:left}.fr{float:right}.clearfix::before,.clearfix::after{content:"";height:0;line-height:0;display:block;visibility:hidden;clear:both}input{border:none;outline:none}body{background:#eeeeee;min-width:1200px}
