--- a/sass/index.scss
+++ b/sass/index.scss
@@ -9,7 +9,7 @@
 header {
     width: 100%;
     height: 60px;
-    border-bottom: 1px solid #c6c6c6;
+    border-bottom: 1px solid #ddd;
     position: relative;
     nav {
         padding: 0 100px;
@@ -102,7 +102,6 @@ main {
             div {
                 display: flex;
                 justify-content: space-between;
-
                 img {
                     width: 80px;
                     height: 80px;
@@ -126,8 +125,17 @@ main {
 
 footer {
     width: 100%;
-    height: 150px;
-    background: rgba(128, 128, 128, 0.7);
+    height: 150px; // background: rgba(128, 128, 128, 0.7);
     color: white;
     text-align: center;
+    border-top: 1px solid #ddd;
+    p {
+        // text-align: center;
+        padding: 20px 0;
+        a{
+            color: #3472ef;
+            
+
+        }
+    }
 }
