--- a/sass/index.scss
+++ b/sass/index.scss
@@ -11,6 +11,7 @@ header {
     height: 60px;
     border-bottom: 1px solid #ddd;
     position: relative;
+    background: #525252;
     nav {
         padding: 0 100px;
         padding-right: 250px;
@@ -33,7 +34,7 @@ header {
                 justify-content: space-around;
                 line-height: 60px;
                 a {
-                    color: black;
+                    color: #fff;
                 }
             }
         }
@@ -46,7 +47,7 @@ header {
             input {
                 font-size: 12px;
                 padding: 3px 5px;
-                border-radius: 5px;
+                border-radius: 3px;
             }
             input:first-child {
                 height: 22px;
@@ -67,10 +68,13 @@ main {
         h2 {
             border-left: 4px solid #3472ef;
             padding: 0 10px;
-            margin: 30px 0;
+            margin: 10px 0;
         }
-        .test {
-            text-indent: 2em;
+        .art_list{
+            padding: 20px 0;
+            .test {
+                text-indent: 2em;
+            }
         }
     }
     aside {
@@ -83,7 +87,7 @@ main {
             padding: 20px 20px 0 20px;
             h3 {
                 border-left: 4px solid #3472ef;
-                padding: 0 10px; // margin: 30px 0;
+                padding: 0 10px;
             }
             div {
                 padding-top: 10px;
@@ -117,7 +121,8 @@ main {
             }
             p {
                 text-indent: 2em;
-                color: orange;
+                color: #525252;
+               
             }
         }
     }
@@ -125,17 +130,15 @@ main {
 
 footer {
     width: 100%;
-    height: 150px; // background: rgba(128, 128, 128, 0.7);
-    color: white;
+    height: 150px;
+    background: rgba(185, 185, 185, 0.6);
+    color: #fff;
     text-align: center;
     border-top: 1px solid #ddd;
     p {
-        // text-align: center;
         padding: 20px 0;
-        a{
-            color: #3472ef;
-            
-
+        a {
+            color: #fff;
         }
     }
 }
